hphp/hack/test/typecheck/uninstantiable_meth_return1.php.exp
File "uninstantiable_meth_return1.php", line 7, characters 27-27:
C is uninstantiable (Typing[4002])
File "uninstantiable_meth_return1.php", line 4, characters 22-22:
Declaration is here
