hphp/hack/test/typecheck/uninstantiable_meth_return1.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

abstract final class C {}

class D {
  public function foo(): ?C {
    return null;
  }
}
